tests/outref/TERR009.ref
LINE 1:1:   !;
            ^
syntax error, unexpected EXCLAMATION
